assets/css/style.css
    @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300&family=Oswald:wght@300&display=swap');

    * {
        margin: 0;
        padding: 0;
        border: none;
    }

    body {
        font-family: Manrope, sans-serif;
        font-weight: 400;
        color: #5d3c96;
    }

    /* headings and logo */

    h1,
    h2 {
        font-family: Oswald, sans-serif;
        text-transform: uppercase;
        letter-spacing: 3px;
        color: #fafafa;
    }

    h3 {
        color: #5d3c96;
    }

    header {
        background-color: #4fc4cf;
        display: flex;
        justify-content: space-between;
        align-items: center;

    }

    .logo {
        width: 150px;
        height: 150px;
        margin-top: 10px;
    }

    .menu {
        list-style: none;

    }

    .menu li {
        display: inline-block;
        padding: 0 50px;
    }

    .menu a {
        color: #fafafa;
        text-decoration: none;
    }

    .active {
        border-bottom: 2px solid #5d3c96;
    }


    /* image left and about-us section */

    .main-bg {
        text-align: center;
        display: flex;
        margin: 50px auto;
        color: #4fc4cf
    }

    .image-left {
        flex: 1;
        border-radius: 0 30%;
        margin: 10px 20px;
    }

    .image-left img {
        width: 100%;
        height: auto;
        border-radius: 0 30%;
        margin: auto;
    }

    .right-about {
        flex: 2;
        margin: auto 30px;
        font-size: 150%;
        text-align: center;
        box-sizing: border-box;
    }

    .right-about p {
        text-align: justify;
        margin-top: 10px;
    }

    hr {
        border-top: 1px solid #5d3c96;
        width: 100%;
        margin: 0 auto;
    }


    /* services */

    .services-container {
        display: flex;
        margin: 50px 15px;
        flex-direction: column;
        color: #4fc4cf
    }

    .services {
        display: flex;
        margin: 50px 0;
        text-align: justify;
    }

    .services-container h2 {
        color: #5d3c96;
        text-align: center;
        font-size: xx-large;
    }

    .services p {
        margin-top: 15px;
    }

    .services-left-1 {
        margin: 0 15px auto 15px;
        flex: 1;
        order: 1;
    }

    .services-left-2 {
        margin: auto 15px 15px 15px;
        flex: 1;
        order: 3;
    }

    .services-image {
        order: 2;
        margin: 20px 15px;
    }


    .services-image img {
        width: 100%;
        height: auto;
        border-radius: 0 50%;
    }


    #services-right-1 {
        margin: 0 15px auto 15px;
        flex: 1;
        order: 1;
    }

    #services-right-2 {
        flex: 1;
        order: 3;
        margin: auto 15px 15px 15px;
    }

    /* Our team section*/

    .our-team-container {

        display: flex;
        margin: 50px 15px;
        flex-direction: column;
    }

    .our-team-container h2 {
        color: #5d3c96;
        font-size: xx-large;
        text-align: center;
    }

    .our-team-container h3 {
        color: #5d3c96;
        text-align: center;
    }

    .our-team {
        display: flex;
        text-align: justify;
        justify-content: space-between;
        flex-direction: column;
        color: #4fc4cf
    }

    /* .our-team-1 {
        
        flex-basis: 25%;
    }

    .our-team-2 {
        
        flex-basis: 25%;
    }

    .our-team-3 {
        
        flex-basis: 25%;
    }

    .our-team-4 {
        
        flex-basis: 25%;
    } */

    .form-container-outer {
        background: url() no-repeat center center;
        background-color: rgba(79, 196, 207, 0.7);
        width: 100%;
        overflow: hidden;
        position: relative;
        
    }

    .form-container-bg {
        
        display: flex;
        justify-content: center;
    }

    .form-container-mid {
        display: flex;
        justify-content: center;
        width: 80%;
        
    }

    .form-container {
        width: 50%;
        display: flex;
        flex-direction: column;
        color: #3f3f3f;
        margin: 10px 0;
        background-color: rgba(229, 231, 233, 0.7);
        align-items: center;
    }

    .signup-form {
        width: 80%;
        padding: 20px 0;
    }

    .required-field-b {
        font-size: small;
    }

    .required-field {
        color: #f74242;
    }

    .form-control {
        display: flex;
        flex-direction: column;
    }

    .form-control input {
        flex: 1;
    }

    .text-input {
        border-radius: 5px;
        border: 2px inset #5d3c96;
        line-height: 2;

    }

    .signup-form div {
        margin-bottom: 20px;
    }

    .join-button {
        margin-top: 10px;
        border-radius: 5px;
        padding: 10px 20px 10px 20px;
        text-align: center;
        font-size: 100%;
        background-color: #4fc4cf;
        color: #fafafa;
        display: block;
    }

    /* footer*/

    footer {
        background-color: #3f3f3f;
        color: #fafafa;
        display: flex;
        flex-direction: column;
    }

    .footer-container {
        display: flex;
        justify-content: space-between;
        width: 100%;
        margin: 20px auto;
    }

    footer a {
        color: #fafafa;
    }

    .social {
        font-size: 150%;
        align-items: center;
        margin-right: auto;
        order: 1;
        display: flex;
        justify-content: space-between;
        box-sizing: border-box;
        margin-left: 25px;
        flex-wrap: wrap;
    }

    .social li {
        display: inline-block;
        padding-left: 25px;
    }

    .map-footer {
        align-items: center;
        box-sizing: border-box;
        order: 3;
        padding-right: 50px;
    }

    #address {
        margin-right: 10px;
        text-align: left;
        letter-spacing: 2px;
        order: 2;

    }

    #address h3 {
        padding-top: 15px;
        color: #fafafa;
    }

    #address p {
        margin-top: 15px;
    }

    .copyright {
        margin: auto;
    }

    .copyright h3 {
        color: #fafafa;
    }

    @media screen and (max-width: 800px) {

        .our-team,
        .main-bg,
        .services,
        .footer-container {
            flex-direction: column;
        }

        .main-bg {
            font-size: 80%;
        }

        .image-left {
            padding: 0 5px;
        }

        .menu li {
            display: inline-block;
        }

        .map-footer {
            order: 2;
        }

        iframe {
            width: 100%;
            margin-left: 25px;

        }

        #address {
            margin: 0 25px 10px;
            order: 1;
        }

        .form-container {
            width: 100%;
            margin: 0;
        }

        .form-container-mid {
            width: 100%;
        }

        .social {
            order: 3;
            margin: 10px 0 0 0;
        }

        .social li {
            margin-right: 15px;
        }
    }

